--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>site1</title>
 </head>
 <body>
-    
+    <article>    
+        <h1>TÍTULO!!</h1>
+        <h2>Subtítulo</h2>
+        <p>parágrafo tlgd</p>
+    </article>
 </body>
 </html>
